--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -1,4 +1,4 @@
-name: Waka
+name: Waka Readme
 
 on:
   schedule:
@@ -10,7 +10,8 @@ jobs:
     name: Update Readme with Metrics
     runs-on: ubuntu-latest
     steps:
-      - uses: DareDevil1214/README.md@master
+      - uses: DareDevil1214/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          SHOW_TOTAL_CODE_TIME: "True"
